pod-security-vpol/baseline/disallow-selinux/.kyverno-test-exceptions/exception-resources.yaml
apiVersion: v1
kind: Pod
metadata: {name: exception-partial, namespace: default}
spec: {containers: [{name: app, image: nginx:1.27, securityContext: {seLinuxOptions: {type: spc}}}]}
---
apiVersion: v1
kind: Pod
metadata: {name: exception-wrong, namespace: default}
spec: {containers: [{name: app, image: nginx:1.27, securityContext: {seLinuxOptions: {type: wrong}}}]}
---
apiVersion: v1
kind: Pod
metadata: {name: exception-user-badrole, namespace: default}
spec: {containers: [{name: app, image: nginx:1.27, securityContext: {seLinuxOptions: {user: approved, role: bad}}}]}
---
apiVersion: v1
kind: Pod
metadata: {name: exception-baduser-role, namespace: default}
spec: {containers: [{name: app, image: nginx:1.27, securityContext: {seLinuxOptions: {user: bad, role: approved}}}]}
---
apiVersion: v1
kind: Pod
metadata: {name: exception-both, namespace: default}
spec: {containers: [{name: app, image: nginx:1.27, securityContext: {seLinuxOptions: {user: approved, role: approved}}}]}
---
apiVersion: v1
kind: Pod
metadata: {name: exception-sibling, namespace: default}
spec: {containers: [{name: app, image: nginx:1.27, securityContext: {seLinuxOptions: {type: spc, user: bad}}}]}
---
apiVersion: v1
kind: Pod
metadata: {name: exception-whole, namespace: default}
spec: {containers: [{name: app, image: nginx:1.27, securityContext: {seLinuxOptions: {type: wrong}}}]}
